# fw-nrfconnect-zephyr-1

./: CMakeLists.txt  CODEOWNERS  Kconfig.zephyr  west.yml
.github/workflows/: clang.yaml
arch/common/: rom_start_offset.ld
boards/arm/nrf5340_dk_nrf5340/: CMakeLists.txt
boards/nordic/nrf54l15pdk/: Kconfig.defconfig
cmake/: boards.cmake  extensions.cmake  host-tools.cmake  kconfig.cmake  kobj.cmake  mcuboot.cmake  version.cmake  zephyr_module.cmake
cmake/app/: boilerplate.cmake
cmake/flash/: CMakeLists.txt
cmake/linker/ld/: target.cmake
cmake/modules/: Findarmclang.cmake  configuration_files.cmake  dts.cmake  extensions.cmake  kconfig.cmake  zephyr_module.cmake
cmake/reports/: CMakeLists.txt
doc/: CMakeLists.txt
include/net/: socket.h
include/storage/: flash_map.h
modules/: Kconfig.sysbuild
modules/hal_nordic/: CMakeLists.txt
samples/application_development/code_relocation/: CMakeLists.txt
samples/application_development/external_lib/: CMakeLists.txt
samples/application_development/out_of_tree_board/: CMakeLists.txt
samples/application_development/out_of_tree_driver/: CMakeLists.txt
samples/basic/blink_led/: CMakeLists.txt
samples/basic/blinky/: CMakeLists.txt
samples/basic/button/: CMakeLists.txt
samples/basic/fade_led/: CMakeLists.txt
samples/basic/minimal/: CMakeLists.txt
samples/basic/rgb_led/: CMakeLists.txt
samples/basic/servo_motor/: CMakeLists.txt
samples/basic/threads/: CMakeLists.txt
samples/bluetooth/beacon/: CMakeLists.txt
samples/bluetooth/central/: CMakeLists.txt
samples/bluetooth/central_hr/: CMakeLists.txt
samples/bluetooth/eddystone/: CMakeLists.txt
samples/bluetooth/handsfree/: CMakeLists.txt
samples/bluetooth/hci_pwr_ctrl/: CMakeLists.txt
samples/bluetooth/hci_rpmsg/: CMakeLists.txt  prj.conf
samples/bluetooth/hci_spi/: CMakeLists.txt
samples/bluetooth/hci_uart/: CMakeLists.txt
samples/bluetooth/hci_usb/: CMakeLists.txt
samples/bluetooth/ibeacon/: CMakeLists.txt
samples/bluetooth/ipsp/: CMakeLists.txt
samples/bluetooth/mesh/: CMakeLists.txt
samples/bluetooth/mesh_demo/: CMakeLists.txt
samples/bluetooth/peripheral/: CMakeLists.txt
samples/bluetooth/peripheral_csc/: CMakeLists.txt
samples/bluetooth/peripheral_dis/: CMakeLists.txt
samples/bluetooth/peripheral_esp/: CMakeLists.txt
samples/bluetooth/peripheral_hids/: CMakeLists.txt
samples/bluetooth/peripheral_hr/: CMakeLists.txt  prj.conf
samples/bluetooth/peripheral_ht/: CMakeLists.txt
samples/bluetooth/peripheral_sc_only/: CMakeLists.txt
samples/bluetooth/scan_adv/: CMakeLists.txt
samples/bluetooth/st_ble_sensor/: CMakeLists.txt
samples/boards/arc_secure_services/: CMakeLists.txt
samples/boards/sensortile_box/: CMakeLists.txt
samples/cpp_synchronization/: CMakeLists.txt
samples/display/cfb/: CMakeLists.txt
samples/display/cfb_custom_font/: CMakeLists.txt
samples/display/grove_display/: CMakeLists.txt
samples/display/lvgl/: CMakeLists.txt
samples/drivers/CAN/: CMakeLists.txt
samples/drivers/crypto/: CMakeLists.txt
samples/drivers/current_sensing/: CMakeLists.txt
samples/drivers/display/: CMakeLists.txt
samples/drivers/entropy/: CMakeLists.txt
samples/drivers/flash_shell/: CMakeLists.txt
samples/drivers/ht16k33/: CMakeLists.txt
samples/drivers/i2c_fujitsu_fram/: CMakeLists.txt
samples/drivers/kscan/: CMakeLists.txt
samples/drivers/lcd_hd44780/: CMakeLists.txt
samples/drivers/led_apa102/: CMakeLists.txt
samples/drivers/led_apa102c_bitbang/: CMakeLists.txt
samples/drivers/led_lp3943/: CMakeLists.txt
samples/drivers/led_lp5562/: CMakeLists.txt
samples/drivers/led_lpd8806/: CMakeLists.txt
samples/drivers/led_pca9633/: CMakeLists.txt
samples/drivers/led_ws2812/: CMakeLists.txt
samples/drivers/ps2/: CMakeLists.txt
samples/drivers/soc_flash_nrf/: CMakeLists.txt
samples/drivers/spi_flash/: CMakeLists.txt
samples/drivers/spi_fujitsu_fram/: CMakeLists.txt
samples/drivers/watchdog/: CMakeLists.txt
samples/hello_world/: CMakeLists.txt
samples/hello_world/src/: main.c
samples/mpu/mpu_test/: CMakeLists.txt
samples/net/dhcpv4_client/: CMakeLists.txt
samples/net/dns_resolve/: CMakeLists.txt
samples/net/eth_native_posix/: CMakeLists.txt
samples/net/gptp/: CMakeLists.txt
samples/net/gsm_modem/: CMakeLists.txt
samples/net/ipv4_autoconf/: CMakeLists.txt
samples/net/lldp/: CMakeLists.txt
samples/net/lwm2m_client/: CMakeLists.txt
samples/net/mdns_responder/: CMakeLists.txt
samples/net/mqtt_publisher/: CMakeLists.txt
samples/net/promiscuous_mode/: CMakeLists.txt
samples/net/stats/: CMakeLists.txt
samples/net/telnet/: CMakeLists.txt
samples/net/updatehub/: CMakeLists.txt
samples/net/vlan/: CMakeLists.txt
samples/net/wifi/: CMakeLists.txt
samples/net/wpan_serial/: CMakeLists.txt
samples/net/wpanusb/: CMakeLists.txt
samples/net/zperf/: CMakeLists.txt
samples/nfc/nfc_hello/: CMakeLists.txt
samples/philosophers/: CMakeLists.txt
samples/posix/gettimeofday/: CMakeLists.txt
samples/sensor/adt7420/: CMakeLists.txt
samples/sensor/adxl362/: CMakeLists.txt
samples/sensor/adxl372/: CMakeLists.txt
samples/synchronization/: CMakeLists.txt
scripts/: west-commands.yml  zephyr_module.py
scripts/ci/: check_compliance.py
scripts/west_commands/: export.py  sign.py
share/sysbuild/: CMakeLists.txt  Kconfig  Kconfig.image.template
share/sysbuild/bootloader/: CMakeLists.txt  Kconfig  Kconfig.image.mcuboot.template
share/sysbuild/cmake/modules/: sysbuild_extensions.cmake  sysbuild_kconfig.cmake
share/sysbuild/radio/: CMakeLists.txt  Kconfig
subsys/testsuite/: unittest.cmake
tests/bluetooth/tester/: CMakeLists.txt
(+352 files in other folders)
